# real-estate-adviser-be

./: .gitignore  Dockerfile  common.py  config.py  docker-compose.yaml  format_str.py  main.py  model_trainer.py  price_predict.py  pyproject.toml  train_notebook.ipynb
active_listings/: router.py  schemas.py  service.py  utils.py
add_location/: router.py  schemas.py  service.py
draft/: train_notebook.ipynb
locations/: router.py  schemas.py
real_estate_adviser_service/: common.py  config.py  main.py
real_estate_adviser_service/active_listings/: router.py  schemas.py  service.py  utils.py
real_estate_adviser_service/add_location/: router.py  schemas.py  service.py  utils.py
real_estate_adviser_service/database/: database.py  utils.py
real_estate_adviser_service/delete_location/: router.py  service.py
real_estate_adviser_service/draft/: train_notebook.ipynb
real_estate_adviser_service/locations/: router.py  schemas.py  service.py
real_estate_adviser_service/trend_chart/: router.py  schemas.py  service.py  trend_chart_query.jinja
