[tool.poetry]
name = "real-estate-scraper"
version = "0.1.0"
description = ""
authors = ["roman-bilets <roman.bilets@teck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.18.1"
requests = "^2.31.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
